--- a/style.css
+++ b/style.css
@@ -20,18 +20,15 @@ header {
 }
 .cart-modal {
   position: absolute;
-  border: 2px solid green;
+  border: 2px solid rgb(255, 255, 255);
   width: 17.5rem;
-  /* width: 15rem; */
-  /* width: 100%; */
-  /* max-width: 22rem; */
   padding: 0.8rem;
-  /* width: 100px; */
   color: black;
   right: 0;
   top: 85%;
   background-color: white;
   z-index: 2;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 .cart-modal button {
   width: 100%;
