--- a/style.css
+++ b/style.css
@@ -20,20 +20,25 @@ header {
 }
 .cart-modal {
   position: absolute;
-  border: 2px solid rgb(255, 255, 255);
-  width: 17.5rem;
-  padding: 0.8rem;
+  padding-bottom: 0.8rem;
+  border: 1px solid rgba(255, 255, 255, 0);
+  border-radius: 10px;
+  width: 95%;
   color: black;
-  right: 0;
-  top: 85%;
+  right: 2.5%;
+  top: 5.5rem;
   background-color: white;
   z-index: 2;
-  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+.cart-modal h3 {
+  margin: 0.8rem;
+  color: hsl(220, 13%, 13%);
 }
 .cart-modal button {
-  width: 100%;
-  /* margin: 0 auto; */
-  /* margin-bottom: 1rem; */
+  width: calc(100% - 1.6rem);
+  margin: 0.6rem 0.8rem;
   padding: 0.7rem;
   font-weight: 600;
   font-size: 0.8rem;
@@ -43,21 +48,22 @@ header {
   border: none;
 }
 .cart-modal-body {
-  /* border: 2px solid red; */
-  padding: 1rem 0;
+  border-top: 1px solid hsl(218, 15%, 89%);
+  padding: 1rem 0.8rem;
   margin-top: 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 .cart-modal-body > img {
-  border: 2px solid magenta;
   width: 1.2rem;
   height: 1.2rem;
   align-self: center;
 }
 .cart-modal-text {
-  border: 2px solid green;
-  font-size: 0.75rem;
+  width: 82%;
+  color: hsl(221, 9%, 64%);
+  font-size: 0.85rem;
 }
 .cart-modal-img {
   width: 3rem;
@@ -140,7 +146,6 @@ header {
 }
 .product-carousel > img {
   width: 100%;
-  height: 21.8rem;
   object-fit: cover;
   object-position: center;
   transition: all linear 1s;
@@ -180,6 +185,57 @@ header {
   width: 100%;
   border-radius: 6px;
 }
+
+#lightbox-product {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  right: 0;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 2;
+  display: none;
+}
+
+#lightbox-product .product-carousel {
+  height: 23.8rem;
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.28);
+}
+#lightbox-product .product-carousel > img {
+  height: 23.8rem;
+  border-radius: 8px;
+}
+
+#lightbox-product .product-img {
+  height: 100%;
+  width: 31rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#lightbox-product .product-img > img {
+  margin-left: auto;
+  margin-bottom: 1rem;
+  fill: orangered;
+}
+
+#lightbox-product .product-thumbnail {
+  width: 100%;
+  padding: 0 1.5rem;
+  justify-content: space-around;
+}
+#lightbox-product .product-thumbnail > * {
+  margin: 0 0.7rem;
+  box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.28);
+}
+
 .product-info {
   padding: 1.2rem;
 }
@@ -305,6 +361,7 @@ article p {
   .nav-list-center .nav-item {
     display: flex;
   }
+
   .product-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -428,5 +485,12 @@ article p {
   }
   .product-info {
     padding: 1.8rem;
+  }
+}
+@media (min-width: 455px) {
+  .cart-modal {
+    width: 17.5rem;
+    right: 0;
+    top: 85%;
   }
 }
