--- a/css/style.css
+++ b/css/style.css
@@ -209,19 +209,27 @@ header {
 
 #lightbox-product .light-prev-icon {
   display: flex;
+  top: calc(50% - 4rem);
+  left: 0.5rem;
 }
 
 #lightbox-product .light-next-icon {
   display: flex;
+  top: calc(50% - 4rem);
+  right: 0.5rem;
+  /* z-index: 2; */
 }
 
 #lightbox-product .product-carousel {
+  /* border: 2px solid green; */
+  position: relative;
   height: 23.8rem;
   width: 100%;
   border-radius: 8px;
   box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.28);
 }
 #lightbox-product .product-carousel > img {
+  /* border: 2px slid green; */
   height: 23.8rem;
   border-radius: 8px;
 }
