--- a/css/style.css
+++ b/css/style.css
@@ -229,9 +229,16 @@ header {
   box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.28);
 }
 #lightbox-product .product-carousel > img {
-  /* border: 2px slid green; */
-  height: 23.8rem;
+  /* border: 2px solid green; */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* height: 23.8rem; */
   border-radius: 8px;
+  display: none;
+}
+#lightbox-product .product-carousel > .product-active {
+  display: block;
 }
 
 #lightbox-product .product-img {
