--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,12 @@ header {
   justify-content: center;
   border-radius: 50%;
   background-color: white;
+  cursor: pointer;
+  font-size: 1.4rem;
+}
+.prev-icon .fa-angle-left:hover,
+.next-icon .fa-angle-right:hover {
+  color: hsl(26, 100%, 55%);
 }
 .prev-icon {
   left: 1.2rem;
@@ -203,6 +209,7 @@ header {
 .thumbnail-img {
   width: 4rem;
   height: 4rem;
+  cursor: pointer;
 }
 .thumbnail-img img {
   width: 100%;
@@ -233,11 +240,9 @@ header {
   display: flex;
   top: calc(50% - 4rem);
   right: 0.5rem;
-  /* z-index: 2; */
 }
 
 #lightbox-product .product-carousel {
-  /* border: 2px solid green; */
   position: relative;
   height: 23.8rem;
   width: 100%;
@@ -245,11 +250,9 @@ header {
   box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.28);
 }
 #lightbox-product .product-carousel > img {
-  /* border: 2px solid green; */
   position: absolute;
   width: 100%;
   height: 100%;
-  /* height: 23.8rem; */
   border-radius: 8px;
   display: none;
 }
@@ -266,10 +269,15 @@ header {
   justify-content: center;
 }
 
-#lightbox-product .product-img > img {
+#lightbox-product .product-img .fa-xmark {
   margin-left: auto;
   margin-bottom: 1rem;
-  fill: orangered;
+  display: block;
+  color: white;
+  cursor: pointer;
+}
+#lightbox-product .product-img .fa-xmark:hover {
+  color: hsl(26, 100%, 55%);
 }
 
 #lightbox-product .product-thumbnail {
@@ -343,6 +351,10 @@ article p {
 .price-counter .price-count {
   font-weight: bolder;
 }
+.plus-count,
+.minus-count {
+  cursor: pointer;
+}
 .product-buttons button {
   width: 100%;
   margin-top: 1.4rem;
@@ -356,13 +368,14 @@ article p {
   background-color: hsl(26, 100%, 55%);
   border-radius: 10px;
   border: none;
+  cursor: pointer;
 }
 .product-buttons button * {
   margin: 0 0.8rem;
 }
-.button img {
-  fill: white;
+.button .fa-cart-shopping {
   color: white;
+  font-size: 1rem;
 }
 @media (min-width: 790px) {
   .product-info {
@@ -503,7 +516,6 @@ article p {
     font-weight: 700;
     font-size: 0.7rem;
   }
-
   .price-counter .price-count {
     font-weight: bolder;
   }
