--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,49 @@
   box-sizing: border-box;
 }
 .main {
-  max-width: 49.375rem;
+  max-width: 59.375rem;
   width: 100%;
   font-family: "Kumbh Sans", sans-serif;
   margin: auto;
+  /* position: relative; */
+}
+.side-navbar {
+  position: fixed;
+  height: 100vh;
+  width: 17rem;
+  background-color: white;
+  z-index: 3;
+  padding: 1.9rem;
+  /* display: none; */
+  transform: translateX(-17rem);
+  transition: transform ease-in 0.6s;
+}
+.active-sidebar {
+  transform: translateX(0);
+  display: block;
+}
+.side-navbar .fa-xmark {
+  color: hsl(221, 9%, 64%);
+  cursor: pointer;
+}
+.side-navbar .fa-xmark:hover {
+  color: hsl(26, 100%, 55%);
+  cursor: pointer;
+}
+.side-navbar .nav-list {
+  margin-top: 2rem;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 1rem;
+}
+.side-navbar .nav-list * {
+  margin-bottom: 0.6rem;
+}
+.side-navbar .nav-list .nav-link {
+  color: hsl(220, 13%, 13%);
+}
+.side-navbar .nav-list .nav-link:hover {
+  color: hsl(221, 9%, 64%);
 }
 header {
   position: relative;
@@ -410,6 +449,9 @@ article p {
 @media (min-width: 670px) {
   .main {
     padding: 1.5rem;
+  }
+  .side-navbar {
+    display: none;
   }
   .nav-list-left .nav-item {
     margin-left: unset;
