--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;500&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +7,7 @@
 .main {
   max-width: 59.375rem;
   width: 100%;
-  font-family: "Kumbh Sans", sans-serif;
+  font-family: 'Kumbh Sans', sans-serif;
   margin: auto;
   /* position: relative; */
 }
@@ -69,6 +69,9 @@ header {
   background-color: white;
   z-index: 2;
   box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.1);
+}
+.cart-active {
+  display: none;
 }
 .cart-modal h3 {
   margin: 0.8rem;
