--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,10 @@ header {
   background-color: white;
   z-index: 2;
   box-shadow: 0px 10px 15px 3px rgba(0, 0, 0, 0.1);
+  display: none;
 }
 .cart-active {
-  display: none;
+  display: block;
 }
 .cart-modal h3 {
   margin: 0.8rem;
@@ -106,6 +107,10 @@ header {
   width: 82%;
   color: hsl(221, 9%, 64%);
   font-size: 0.85rem;
+}
+.cart-modal-text p {
+  display: inline;
+  margin-right: 0.2rem;
 }
 .cart-modal-img {
   width: 3rem;
@@ -171,6 +176,7 @@ header {
   position: absolute;
   font-size: 0.55rem;
   text-align: center;
+  display: none;
 }
 .nav-list {
   align-items: center;
